# surprise_telegram_bot

./: .gitignore  README.md  bot.py  config.py  env.example  gemini_service.py  image_storage.py  image_utils.py  openai_service.py  pyproject.toml  user_storage.py
